# actix-backend

./: .env  Cargo.toml
src/: db.rs  main.rs  routes.rs
src/controllers/: auth_controller.rs
src/middlewares/: auth_middleware.rs
src/models/: mod.rs  profile.rs  sistem.rs  user.rs  verify_register.rs
src/services/: auth_service.rs
src/utils/: token.rs
