[package]
name = "omnichannel-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
env_logger = "0.11"
dotenvy = "0.15"
redis = { version = "0.25", features = ["tokio-comp"] }
futures-util = "0.3"
argon2 = "0.5"